Enhance installation instructions and usage examples in README.md and USER-GUIDE.md; add bin entry for ponysay in package.json and package-lock.json; ensure CLI script is executable.

--- a/ponysay-node/package.json
+++ b/ponysay-node/package.json
@@ -1,7 +1,9 @@
 {
   "type": "module",
   "name": "ponysay-node",
-  "type": "module",
+  "bin": {
+    "ponysay": "src/cli.mjs"
+  },
   "version": "0.1.0",
   "description": "Ponysay: Node.js edition – display ponies with quotes in your terminal!",
   "main": "src/index.mjs",
